--- a/Tour-Planner/Tour-Planner/MainWindow.xaml
+++ b/Tour-Planner/Tour-Planner/MainWindow.xaml
@@ -5,14 +5,55 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Tour_Planner"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Tour-Planner" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50*"/>
-            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="25*"/>
+            <ColumnDefinition Width="3"/>
+            <ColumnDefinition Width="75*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Hello" Name="Welcome" Grid.Column="0"/>
-        <TextBlock FontSize="23" Text="Fuck yoz" Name="Text" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1"/>
-        <Button Click="Button_Click" Name="Click" VerticalAlignment="Bottom" Content="Click Me!"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="80*"/>
+        </Grid.RowDefinitions>
+        
+        <ListView Grid.Column="0" Grid.Row="2" Name="Tracks">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <TextBlock Text="{Binding TrackName}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <TextBlock FontSize="30" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Hello" Name="Welcome"/>
+        <Button Click="Button_Click" Grid.Column="0" Grid.Row="2" Name="Add" VerticalAlignment="Top" Content="Click Me!" Width="20"/>
+        <GridSplitter Grid.Column="1" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+        <Border Margin="5" Grid.Column="2" Grid.Row="2" Background="LightGray">
+            
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="45*"/>
+                    <RowDefinition Height="45*"/>
+                </Grid.RowDefinitions>
+                <Border Grid.Column="0" Grid.Row="0">
+                    <StackPanel Orientation="Horizontal" Grid.Row="0">
+
+                        <RadioButton Background="Gray" Content="Route"
+                                     Height="Auto"
+                                     Foreground="Black"
+                                     FontSize="14"
+                                     IsChecked="True"/>
+
+                        <RadioButton Background="Gray" Content="Description"
+                                     Foreground="Black"
+                                     Height="Auto"
+                                     FontSize="14"/>
+                    </StackPanel>
+                </Border>
+            </Grid>
+        </Border>
     </Grid>
 </Window>
