--- a/Tour-Planner/Tour-Planner/MainWindow.xaml
+++ b/Tour-Planner/Tour-Planner/MainWindow.xaml
@@ -27,7 +27,10 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <TextBlock FontSize="30" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Hello" Name="Welcome"/>
+        <TextBlock FontSize="30" Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Hello" Name="Welcome"/>
+        <TextBox Margin="5"  VerticalAlignment="Center" HorizontalAlignment="Stretch" Name="tbSettingText" Grid.Column="0" Grid.Row="1">
+            Search
+        </TextBox>
         <Button Click="Button_Click" Grid.Column="0" Grid.Row="2" Name="Add" VerticalAlignment="Top" Content="Click Me!" Width="20"/>
         <GridSplitter Grid.Column="1" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
         <Border Margin="5" CornerRadius="10" Grid.Column="2" Grid.Row="2" Background="LightGray">
